--- a/src/main/resources/templates/admin/configs/list.html
+++ b/src/main/resources/templates/admin/configs/list.html
@@ -16,25 +16,109 @@
         </nav>
         <div id="content" class="content">
             <div class="card mb-1 mx-auto">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column gap-2">
                     <h5 class="text-center"><b>Configs</b></h5>
+                    <p class="mb-2">Attention, la configuration en base surcharge le fichier application.yml</p>
                     <div class="alert alert-light">
-                        MappingFiltersGroups
-                        <ul>
-                        <li th:each="mappingFilterGroup : ${config.mappingFiltersGroups.entrySet()}">
-                            <span th:text="${mappingFilterGroup.key}"></span> : <span th:text="${mappingFilterGroup.value}"></span>
-                        </li>
+                        <h5>MappingFiltersGroups</h5>
+                        <div th:if="${config == null || config.mappingFiltersGroups.isEmpty()}" class="alert alert-secondary">
+                            Aucun mapping filtre/groupe en base de données
+                        </div>
+                        <ul th:unless="${config == null || config.mappingFiltersGroups.isEmpty()}" class="list-group">
+                            <li class="list-group-item d-flex justify-content-center gap-5"><div class="w-50">Groupe</div><div class="w-50">Filtre</div><div class="w-25"></div></li>
+                            <li th:each="mappingFilterGroup : ${config.mappingFiltersGroups.entrySet()}" class="list-group-item d-flex justify-content-around gap-5">
+                                <input th:value="${mappingFilterGroup.key}" class="form-control w-50" disabled/>
+                                <input th:value="${mappingFilterGroup.value}" class="form-control w-50" disabled/>
+                                <form th:action="'/admin/configs/mapping-filter-group'" th:method="'delete'" class="w-25"
+                                    onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce mapping ? Cette action est irréversible.');">
+                                    <input type="hidden" name="group" th:value="${mappingFilterGroup.key}">
+                                    <button type="submit" class="btn btn-danger"><i class="fi fi-rr-trash"></i></button>
+                                </form>
+                            </li>
                         </ul>
-
-                        <form th:action="'/admin/configs/add-mapping-filter-group'" th:method="'post'">
-
-                            <label for="group">Group:</label>
-                            <input type="text" id="group" name="group" required>
-
-                            <label for="filter">Filter:</label>
-                            <input type="text" id="filter" name="filter" required>
-
-                            <button type="submit">Ajouter</button>
+                        <hr>
+                        <form th:action="'/admin/configs/mapping-filter-group'" th:method="'post'">
+                            <p><b>Ajouter/Modifier un mapping filtre/groupe</b></p>
+                            <div class="d-flex gap-5 align-items-center">
+                            <label for="group1">Nom du groupe :</label>
+                            <input type="text" class="form-control" id="group1" name="group" style="width: 300px;" required>
+                            <label for="filter">Filter ldap :</label>
+                            <input type="text" class="form-control" id="filter" name="filter" style="width: 500px;" required>
+                            <button type="submit" class="btn btn-success">Ajouter</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="alert alert-light">
+                        <h5>MappingGroupsRoles</h5>
+                        <div th:if="${config == null || config.mappingGroupsRoles.isEmpty()}" class="alert alert-secondary">
+                            Aucun mapping group/role en base de données
+                        </div>
+                        <ul th:unless="${config == null || config.mappingGroupsRoles.isEmpty()}" class="list-group mb-2">
+                            <li class="list-group-item d-flex justify-content-center gap-5"><div class="w-50">Groupe</div><div class="w-50">Role</div><div class="w-25"></div></li>
+                            <li th:each="mappingGroupRole : ${config.mappingGroupsRoles.entrySet()}" class="list-group-item d-flex gap-5">
+                                <input th:value="${mappingGroupRole.key}" class="form-control w-50" disabled/>
+                                <input th:value="${mappingGroupRole.value}" class="form-control w-50" disabled/>
+                                <form th:action="'/admin/configs/mapping-group-role'" th:method="'delete'" class=" w-25"
+                                    onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce mapping ? Cette action est irréversible.');">
+                                    <input type="hidden" name="group" th:value="${mappingGroupRole.key}">
+                                    <button type="submit" class="btn btn-danger"><i class="fi fi-rr-trash"></i></button>
+                                </form>
+                            </li>
+                        </ul>
+                        <hr>
+                        <form th:action="'/admin/configs/mapping-group-role'" th:method="'post'">
+                            <p><b>Ajouter/Modifier un mapping groupe/role</b></p>
+                            <div class="d-flex gap-5 align-items-center">
+                                <label for="group2">Nom du groupe :</label>
+                                <input type="text" class="form-control" id="group2" name="group" style="width: 300px;" required>
+                                <label for="filter">Nom du rôle :</label>
+                                <input type="text" class="form-control" id="role" name="role" style="width: 500px;" required>
+                                <button type="submit" class="btn btn-success">Ajouter</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="alert alert-light">
+                        <h5>GroupMappingSpel</h5>
+                        <small>Dans les expressions SpEL seul l’attribut #eppn est géré. Une erreur dans l'expression empêchera les utilisateurs concernés de se connecter !</small>
+                        <br><br>
+                        <div th:if="${config == null || config.groupMappingSpel.isEmpty()}" class="alert alert-secondary">
+                            Aucun filtre spel en base de données
+                        </div>
+                        <ul th:unless="${config == null || config.groupMappingSpel.isEmpty()}" class="list-group mb-2">
+                            <li class="list-group-item d-flex justify-content-center gap-5"><div class="w-50">Role</div><div class="w-50">SpEL</div><div class="w-25"></div></li>
+                            <li th:each="groupMappingSpel : ${config.groupMappingSpel.entrySet()}" class="list-group-item d-flex gap-5">
+                                <input th:value="${groupMappingSpel.key}" class="form-control w-50" disabled />
+                                <input th:value="${groupMappingSpel.value}" class="form-control w-50" disabled />
+                                <form th:action="'/admin/configs/group-mapping-spel'" th:method="'delete'" class=" w-25"
+                                    onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce mapping ? Cette action est irréversible.');">
+                                    <input type="hidden" name="group" th:value="${groupMappingSpel.key}">
+                                    <button type="submit" class="btn btn-danger"><i class="fi fi-rr-trash"></i></button>
+                                </form>
+                            </li>
+                        </ul>
+                        <hr>
+                        <form th:action="'/admin/configs/group-mapping-spel'" th:method="'post'">
+                            <p><b>Ajouter/Modifier un mapping SpEL</b></p>
+                            <div class="d-flex gap-5 align-items-center">
+                                <label for="group3">Nom du rôle :</label>
+                                <input type="text" class="form-control" id="group3" name="group" style="width: 300px;" required>
+                                <label for="spel">Formule SpEL :</label>
+                                <input type="text" class="form-control" id="spel" name="spel" style="width: 500px;" required>
+                                <button type="submit" class="btn btn-success">Ajouter</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="alert alert-light">
+                        <h5>HideAutoSign</h5>
+                        <form th:action="'/admin/configs/update-hide-auto-sign'" th:method="'post'">
+                            <div class="d-flex gap-5 align-items-center">
+                            <select name="hideAutoSign" class="form-select">
+                                <option value="" th:selected="${config.hideAutoSign == null}">— null —</option>
+                                <option value="false" th:selected="${config.hideAutoSign != null && !config.hideAutoSign}">false</option>
+                                <option value="true" th:selected="${config.hideAutoSign != null && config.hideAutoSign}">true</option>
+                            </select>
+                            <button type="submit" class="btn btn-success">Valider</button>
+                            </div>
                         </form>
                     </div>
                 </div>
