--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -360,17 +360,40 @@ dd {
 .circle {
     display: none;
     position: absolute;
-    opacity: 0.6;
+    opacity: 0.8;
     cursor: pointer;
     z-index: 3;
+    color: var(--bs-dark);
+}
+
+.circle img {
+    border: 2px solid transparent !important;
 }
 
 .circle:hover {
     opacity: 1;
 }
 
+@keyframes blinkScale {
+    0%   { opacity: 0.8; transform: scale(1); }
+    50%  { opacity: 1; transform: scale(1.5); }
+    100% { opacity: 0.8; transform: scale(1); }
+}
+
+.circle:hover img {
+    /*background-color: var(--bs-danger);*/
+    /*border-radius: 4px;*/
+    /*border: 2px solid var(--bs-danger) !important;*/
+    animation: blinkScale 0.8s infinite ease-in-out;
+}
+
+.circle-background img {
+    animation: blinkScale 0.8s infinite ease-in-out;
+
+}
+
 .circle-border {
-    border: 2px solid red !important;
+    border: 2px solid var(--bs-danger) !important;
 }
 
 #snackbar {
