--- a/src/main/resources/templates/user/signrequests/includes/tools.html
+++ b/src/main/resources/templates/user/signrequests/includes/tools.html
@@ -51,7 +51,7 @@
             <th:block th:if="${editable && signBook.status != T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).draft}">
                 <button class="btn btn-warning me-1"
                         name="changeMode"
-                        id="changeMode1"><i class="fi fi-rr-comment-alt-medical"></i> <span class="d-none d-xl-inline">Mode annotation</span> <span class="badge rounded-pill bg-dark" th:text="${comments.size()}"></span></button>
+                        id="changeMode1"><i class="fi fi-rr-comment-alt-medical"></i> <span class="d-none d-xl-inline">Mode annotation</span> <span class="badge rounded-pill bg-dark" th:if="${comments.size() > 0}" th:text="${comments.size()}"></span></button>
             </th:block>
             <div id="insert-btn-div">
                 <button id="insert-btn" th:if="${editable}" class="btn btn-light btn-outline-primary"
