clean status badges

--- a/src/main/resources/templates/user/signbooks/includes/list-elem.html
+++ b/src/main/resources/templates/user/signbooks/includes/list-elem.html
@@ -103,16 +103,13 @@
             <span th:if="${signBook.endDate == null && signBook.signRequests.size() > 0 && signBook.signRequests.get(0).lastSignedDocument != null}" th:text="${#dates.format(signBook.signRequests.get(0).lastSignedDocument.createDate, 'dd/MM/yyyy HH:mm')}"></span>
             <span th:if="${signBook.deleted}" th:utext="'<br>Supprimé le : <br>' + ${#dates.format(signBook.updateDate, 'dd/MM/yyyy HH:mm')}"></span>
         </td>
-        <td class="clickable-td d-none d-xxl-table-cell">
+        <td class="clickable-td d-table-cell">
             <div th:replace="~{user/signbooks/includes/status :: status(signBook=${signRequest.parentSignBook})}"></div>
         </td>
         <td class="clickable-td d-none d-xxl-table-cell align-middle" th:title="#{'signbook.archivestatus.' + ${signBook.archiveStatus}}">
             <span th:if="${signBook.archiveStatus != null && signBook.archiveStatus.name != 'none'}">
                 <i class="fi fi-rr-box" th:classappend="${signBook.archiveStatus.name == 'archived'} ? 'text-dark' : 'text-secondary'"></i>
             </span>
-        </td>
-        <td class="clickable-td d-xxl-none">
-            <div th:replace="~{user/signbooks/includes/status-sm :: status(signBook=${signRequest.parentSignBook})}"></div>
         </td>
         <td>
             <div class="dropdown position-relative">
