--- a/src/main/resources/templates/admin/workflows/list.html
+++ b/src/main/resources/templates/admin/workflows/list.html
@@ -67,7 +67,10 @@
                                     <i th:unless="${workflow.publicUsage}" class="fa-solid fa-times text-danger"></i>
                                 </td>
                                 <td class="clickable-td" th:text="${workflow.roles}"></td>
-                                <td th:class="${workflow.id != null}? 'clickable-td' : ''" th:text="${workflow.createBy.eppn}"></td>
+                                <td th:class="${workflow.id != null} ? 'clickable-td' : ''" >
+                                    <span th:if="${workflow.createBy != null}" th:text="${workflow.createBy.eppn}"></span>
+
+                                </td>
                                 <td th:if="${workflow.workflowSteps.size() > 0}">
                                     <ul class="list-group">
                                     <th:block th:each="workflowStep, iterator : ${workflow.workflowSteps}">
