--- a/src/main/resources/templates/admin/workflows/update.html
+++ b/src/main/resources/templates/admin/workflows/update.html
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li>
-                        <a id="saveButton" th:if="${workflow.fromCode == null || !workflow.fromCode}" role="button" title="Enregistrer" class="btn-floating btn-lg bg-success"
+                        <a id="saveButton" role="button" title="Enregistrer" class="btn-floating btn-lg bg-success"
                             onclick="document.getElementById('updateSignBook').submit();">
                             <i class="fa-solid fa-save fa-2xl"></i>
                         </a>
