--- a/src/main/resources/templates/user/wizard/wiz-setup-workflow.html
+++ b/src/main/resources/templates/user/wizard/wiz-setup-workflow.html
@@ -29,93 +29,8 @@
     <h4 class="d-flex justify-content-center mt-4">Démarrage du circuit</h4>
     <form id="pending-sign-form">
         <button type="submit" id="send-sign-submit" class="d-none"></button>
-        <p th:unless="${signBook.liveWorkflow.workflow.workflowSteps.size() > 0}">Après la validation, vous pourrez télécharger le document</p>
-        <div th:if="${signBook.liveWorkflow.workflow.workflowSteps.size() > 0}">
-            <p>
-                Le circuit "<span th:text="${signBook.liveWorkflow.workflow.description}"></span>" comporte <span th:text="${signBook.liveWorkflow.workflow.workflowSteps.size()}"></span> étape<span th:if="${signBook.liveWorkflow.workflow.workflowSteps.size()} > 1">s</span>
-            </p>
-            <ul class="list-group striped-list">
-            <th:block th:each="step, iterator : ${signBook.liveWorkflow.workflow.workflowSteps}">
-                <li th:id="'step-wiz-' + ${iterator.index + 1}" class="list-group-item border-secondary" th:title="#{'signbook.signtype.' + ${step.signType}}">
-                    <div class="form-group mb-1">
-                        <b th:text="'Étape ' + ${iterator.index + 1} + ' : '"></b>
-                        <span th:if="${step.description != null && step.description != ''}" th:text="${step.description} + '.'"></span>
-                        <th:block th:unless="${step.autoSign}">
-                        Destinataires :
-                        <th:block th:each="user, iterator : ${step.users}">
-                            <span th:text="${user.email}"></span><span th:if="${user.currentReplaceByUser != null}" th:text="' (remplacé par ' + ${user.currentReplaceByUser.email} +')'"></span>
-                            <span th:if="${iterator.index >= step.users.size()}">, </span>
-                        </th:block>
-                        <span th:if="${step.repeatable}"> (cette étape peut donner lieu à plusieurs validations en série)</span>
-                        </th:block>
-                        <th:block th:if="${step.autoSign}">
-                            Étape automatique
-                        </th:block>
-                    </div>
-                    <div th:if="${step.changeable == true && !step.autoSign}" class="form-group mb-1">
-                        <label>
-                            <span th:text="'Vous pouvez modifier ou saisir le(s) participant(s) pour l\'étape ' + ${iterator.index + 1}"></span>
-                            <span th:if="${step.maxRecipients < 99}" th:text="'(maximum ' + ${step.maxRecipients} + ')'" ></span>
-                        </label>
-                        <select th:data-es-max-recipient="${step.maxRecipients}" th:id="'recipientsEmails-' + ${iterator.index + 1}" multiple="multiple" name="recipientEmails" required="required">
-                            <option data-placeholder="true"></option>
-                            <th:block th:each="user : ${step.users}">
-                                <option th:if="${user.email != null}" selected="selected"
-                                        th:text="${user.email}"
-                                        th:value="${user.email}"></option>
-                            </th:block>
-                        </select>
-                        <div th:id="'tempUsers-recipientsEmails-' + ${iterator.index + 1}"></div>
-                        <div class="form-group mb-3" th:id="'all-sign-to-complete-div-' + ${iterator.index + 1}" th:style="${step.users.size() == 1} ? 'display: none'">
-                            <div class="form-check form-switch form-switch-md">
-                                <label  class="form-check-label" th:for="'all-sign-to-complete-' + ${iterator.index + 1}">Tous les participants doivent-ils signer ?</label>
-                                <input type="checkbox" class="form-check-input" th:checked="${step.allSignToComplete}" name="allSignToCompletes" th:value="${iterator.index + 1}" th:id="'all-sign-to-complete-' + ${iterator.index + 1}"/>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </th:block>
-            </ul>
-            <th:block th:if="${isTempUsers}">
-                <hr>
-                <p>Certains destinataires sont externes à l’établissement, merci de saisir/vérifier les informations complémentaires si besoin</p>
-                <th:block th:each="workflowStep, iterator : ${signBook.liveWorkflow.workflow.workflowSteps}">
-                    <th:block th:each="user : ${workflowStep.users}">
-                        <div th:id="'extRecipient-' + ${iterator.index + 1} + '-' + ${user.email}" th:data-es-email="${user.email}" class="alert alert-primary" th:if="${user.userType.name() == 'external'}">
-                            <b>Destinataire : <span th:text="${user.email}"></span></b>
-                            <input id="emails" type="hidden" name="emails" th:value="${user.email}">
-                            <div class="d-flex col-10">
-                                <label class="col-2" for="names">Nom</label>
-                                <input id="names" class="form-control col-10" type="text" name="names" th:value="${user.firstname != 'Nouvel utilisateur'} ? ${user.name} : ''" required>
-                            </div>
-                            <div class="d-flex col-10">
-                                <label class="col-2" for="firstnames">Prénom</label>
-                                <input id="firstnames" class="form-control col-10" type="text" name="firstnames" th:value="${user.firstname != 'Nouvel utilisateur'} ? ${user.firstname} : ''" required>
-                            </div>
-                            <div class="d-flex col-10">
-                                <label class="col-2" for="phones">Mobile</label>
-                                <input id="phones" class="form-control col-10" type="text" name="phones" value="" th:required="${globalProperties.smsRequired}">
-                            </div>
-                        </div>
-                    </th:block>
-                </th:block>
-            </th:block>
-        </div>
-        <ul th:if="${!signBook.liveWorkflow.workflow.targets.isEmpty()}" class="list-group striped-list mt-1">
-        <th:block th:each="target, iterator : ${signBook.liveWorkflow.workflow.targets}">
-            <li th:if="${target.targetUri.contains('mailto:')}" class="list-group-item border-secondary">
-                    <b>Étape finale :</b> Envoi par mail à
-                    <select class="select-users" id="targetEmailsSelect" multiple="multiple" name="targetEmails">
-                        <option data-placeholder="true"></option>
-                        <th:block th:each="targetEmail : ${target.targetUri.replace('mailto:', '').split(',')}">
-                            <option selected="selected" th:if="${targetEmail != ''}" th:text="${targetEmail}" th:value="${targetEmail}"></option>
-                        </th:block>
-                    </select>
-                </li>
-            </th:block>
-        </ul>
-    </form>
-</div>
+        <th:block th:replace="~{user/wizard/includes/workflow-steps :: workflow-steps(${signBook.liveWorkflow.workflow}, 'step-wiz')}"></th:block>
+    </form></div>
 <div class="modal-footer">
     <button id="fast-form-close" type="button" class="btn btn-secondary float-start" data-bs-dismiss="modal">Annuler</button>
     <button type="button" id="send-draft-button" class="btn btn-success" name="draft" value="true">
