--- a/src/main/resources/templates/user/wizard/wiz-start-form.html
+++ b/src/main/resources/templates/user/wizard/wiz-start-form.html
@@ -24,71 +24,7 @@
 <div class="modal-body">
     <form id="send-form">
         <input type="submit" id="send-form-submit" class="d-none">
-        <p th:if="${form.workflow == null || form.workflow.workflowSteps.size() == 0}">Après la validation, vous pourrez télécharger le document</p>
-        <div th:if="${form.workflow != null && form.workflow.workflowSteps.size() > 0}">
-            <h5>
-                Le circuit associé à ce formulaire comporte <span
-                    th:text="${form.workflow.workflowSteps.size()}"></span> étape<span th:if="${form.workflow.workflowSteps.size()} > 1">(s) : </span>
-            </h5>
-            <ul class="list-group striped-list">
-                <th:block th:each="step, iterator : ${form.workflow.workflowSteps}">
-                        <li th:id="'step-form-' + ${iterator.index}" class="list-group-item border-secondary">
-                            <div class="form-group d-inline">
-                                <div>
-                                    <h3 class="d-inline">
-                                        <span class="badge rounded-pill rounded-pill text-bg-primary me-4 align-middle" th:text="${iterator.index + 1}"></span>
-                                    </h3>
-                                    <b th:if="${step.description != null && step.description != ''}" th:text="${step.description}"></b>
-                                    <th:block th:if="${step.users.size() > 0}">
-                                        <div th:if="${step.description != null && step.description != ''}"></div>
-                                        <th:block th:each="user, iterator : ${step.users}">
-                                            <span th:text="${user.firstname} + ' ' + ${user.name}"></span>
-                                            <span th:if="${iterator.index < step.users.size() - 1}"> ,</span>
-                                        </th:block>
-                                    </th:block>
-                                    <th:block th:if="${step.autoSign}">
-                                        <p>Signature automatique</p>
-                                    </th:block>
-                                </div>
-                                <span th:if="${step.repeatable}"> (cette étape peut donner lieu à plusieurs validations en série)</span>
-                            </div>
-                            <div th:if="${step.changeable == true && !step.autoSign}" class="form-group mb-3">
-                                <label><span th:text="'Merci de saisir le' + ${step.maxRecipients != null && step.maxRecipients > 1 ? '(s)' : ''} + ' participant' + ${step.maxRecipients != null && step.maxRecipients > 1 ? '(s)' : ''} + ' pour l\'étape ' + ${iterator.index + 1}"></span></label>
-                                <select class="select-users" th:id="'recipientsEmails-' + ${iterator.index + 1}"
-                                        multiple="multiple" name="recipientEmails" required="required" th:maxlength="${step.maxRecipients}">
-                                    <option data-placeholder="true"></option>
-                                    <th:block th:each="user : ${step.users}">
-                                        <option th:if="${user.email != null && user.email != 'generic'}" selected="selected"
-                                                th:text="${user.email}"
-                                                th:placeholder="${user.email}"
-                                                th:value="${user.email}"></option>
-                                    </th:block>
-                                </select>
-                                <div th:id="'tempUsers-recipientsEmails-' + ${iterator.index + 1}"></div>
-                                <div class="form-group mb-3" th:id="'all-sign-to-complete-div-' + ${iterator.index + 1}" th:style="${step.users.size() == 1} ? 'display: none'">
-                                    <div class="form-check form-switch form-switch-md">
-                                        <label  class="form-check-label" th:for="'all-sign-to-complete-' + ${iterator.index + 1}">Tous les participants doivent-ils signer ?</label>
-                                        <input type="checkbox" class="form-check-input" th:checked="${step.allSignToComplete}" name="allSignToCompletes" th:value="${iterator.index + 1}" th:id="'all-sign-to-complete-' + ${iterator.index + 1}"/>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                </th:block>
-            </ul>
-            <ul th:if="${!form.workflow.targets.isEmpty()}" class="list-group striped-list mt-1">
-                <th:block th:each="target, iterator : ${form.workflow.targets}">
-                    <li th:if="${target.targetUri.contains('mailto:')}" class="list-group-item border-secondary">
-                        <b>Étape finale :</b> Envoi par mail à
-                        <select class="select-users" id="targetEmailsSelect" multiple="multiple" name="targetEmails">
-                            <option data-placeholder="true"></option>
-                            <th:block th:each="targetEmail : ${target.targetUri.replace('mailto:', '').split(',')}">
-                                <option selected="selected" th:if="${targetEmail != ''}" th:text="${targetEmail}" th:value="${targetEmail}"></option>
-                            </th:block>
-                        </select>
-                    </li>
-                </th:block>
-            </ul>
-        </div>
+        <th:block th:replace="~{user/wizard/includes/workflow-steps :: workflow-steps(${form.workflow}, 'step-form')}"></th:block>
     </form>
 </div>
 <div class="modal-footer">
