--- a/src/main/resources/templates/admin/forms/includes/workspace.html
+++ b/src/main/resources/templates/admin/forms/includes/workspace.html
@@ -4,7 +4,7 @@
 <!--/*@thymesVar id="spots" type="java.util.List<org.esupportail.esupsignature.entity.Comment>"*/-->
 <!--/*@thymesVar id="form" type="java.util.List<org.esupportail.esupsignature.entity.Form>"*/-->
 <div th:fragment="workspace" id="workspace" class="alert justify-content-center workspace-pdf workspace-margin-top-admin border-0">
-    <form id="signForm" th:action="''">
+    <form id="signForm" th:action="''" th:if="${workflow != null}">
         <input id="checkDataSubmit" type="submit" style="display: none;"/>
         <div id="pdf" class="mx-auto" style="position: relative !important;">
             <th:block th:each="spot, iterator : ${srpMap.entrySet()}">
