--- a/src/main/resources/templates/admin/forms/list.html
+++ b/src/main/resources/templates/admin/forms/list.html
@@ -20,6 +20,11 @@
             </ol>
         </nav>
         <div id="content" class="content">
+            <div class="fixed-action-simple-btn" >
+                <a title="Créer un formulaire depuis un formulaire PDF" data-bs-toggle="modal" data-bs-target="#newForm" class="btn-lg btn-floating text-dark bg-primary">
+                    <i class="fi fi-rr-apps-add fa-2xl" style="margin-top: 15px;"></i>
+                </a>
+            </div>
             <div class="input-group mb-3">
                 <span class="input-group-text">Filtrer</span>
                 <select id="tags" name="tags" class="form-control slim-select-simple" data-placeholder="Choisir un ou plusieurs tags" multiple onclick="event.stopPropagation();" onchange="document.location.href = '/'+ workflowRole + '/forms?selectedTags=' + Array.from(this.selectedOptions).map(o => o.value).join(',')">
@@ -33,11 +38,6 @@
                     <option value="true" th:selected="${activeVersion != null && activeVersion}">Oui</option>
                     <option value="false" th:selected="${activeVersion != null && !activeVersion}">Non</option>
                 </select>
-            </div>
-            <div id="addButton" class="fixed-action-btns" onmouseover="$('#addButton').toggleClass('active');" onmouseout="$('#addButton').toggleClass('active');">
-                <ul id="collapseExample" class="list-unstyled">
-                    <li><a title="Créer un formulaire depuis un formulaire PDF" data-bs-toggle="modal" data-bs-target="#newForm" class="btn-lg btn-floating text-dark bg-primary"><i class="fa-solid fa-plus fa-2xl"></i></a></li>
-                </ul>
             </div>
             <div class="table-fix-head scrollbar-style rounded-3 col-sm-9 col-md-10 col-xl-11 p-0 m-2">
                 <table class="table table-light table-striped table-hover table-borderless">
