--- a/src/main/resources/templates/admin/forms/signs.html
+++ b/src/main/resources/templates/admin/forms/signs.html
@@ -21,16 +21,11 @@
             </ol>
         </nav>
         <div id="content" class="content">
-            <div class="fixed-action-btns active" th:if="${form.workflow != null}">
+            <div class="fixed-action-btns active" th:if="${workflow != null}">
                 <ul class="list-unstyled">
-                    <li>
-                        <a id="save" title="Enregistrer" type="button" class="btn-floating btn-lg bg-success" onclick="window.location.reload();">
-                            <i class="fa-solid fa-save fa-2xl"></i>
-                        </a>
-                    </li>
                     <li th:if="${form.document != null && form.signRequestParams != null}">
                         <a id="addSignRequestParams" title="Modifier les champs signature" type="button" data-bs-toggle="modal" data-bs-target="#updateSignsModal" class="btn-floating btn-lg bg-warning">
-                            <i class="fa-solid fa-pencil fa-2xl"></i>
+                            <i class="fi fi-rr-pencil fa-2xl text-dark" style="margin-top: 15px"></i>
                         </a>
                     </li>
                 </ul>
@@ -47,14 +42,17 @@
                 </li>
             </ul>
             <div th:replace="~{admin/forms/includes/tools :: tools}"></div>
-            <div style="position: fixed; z-index: 999;width: 300px;">
-            <div th:insert="~{admin/workflows/cards/stepscard-light :: stepscard-light}"></div>
+            <div style="position: fixed; z-index: 999;width: 300px;" th:if="${workflow != null}">
+            <div th:insert="~{admin/workflows/cards/stepscard-light :: stepscard-light}" th:if="${workflow != null}"></div>
             </div>
-            <div th:replace="~{admin/forms/includes/workspace :: workspace}"></div>
+            <div th:replace="~{admin/forms/includes/workspace :: workspace}" th:if="${workflow != null}"></div>
+            <div th:if="${workflow == null}" class="alert alert-warning">
+                Merci d’associer le formulaire à un circuit pour éditer les champs de formulaire
+            </div>
         </div>
     </div>
 </main>
-<script th:inline="javascript" type="module">
+<script th:inline="javascript" type="module" th:if="${workflow != null}">
     import {SignUi} from '/js/modules/ui/signrequests/SignUi.js?version=@[(${versionApp})]@';
     new SignUi(
         [[${form.id}]],
@@ -90,14 +88,14 @@
         false
     );
 </script>
-<div th:if="${form.signRequestParams != null}" data-bs-focus="false" class="modal fade" id="updateSignsModal" tabindex="-1" aria-labelledby="updateSignsModalTitle"  aria-hidden="true">
+<div th:if="${workflow != null && form.signRequestParams != null}" data-bs-focus="false" class="modal fade" id="updateSignsModal" tabindex="-1" aria-labelledby="updateSignsModalTitle"  aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="updateSignsModalTitle">Modifier les champs signatures</h1>
                 <button type="button" class="btn-close" title="Fermer" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" th:if="${workflow != null}">
                 <table class="table table-borderless table-hover">
                     <thead class="table-secondary">
                     <tr>
@@ -138,6 +136,7 @@
         </div>
     </div>
 </div>
+<div th:if="${workflow != null}">
 <th:block th:if="${form.signRequestParams != null}" th:each="signRequestParams : ${form.signRequestParams}">
 <div class="modal" th:id="'modal-warning-' + ${signRequestParams.id}" >
     <div class="modal-dialog">
@@ -168,6 +167,7 @@
     </div>
 </div>
 </th:block>
+</div>
 <footer th:replace="~{fragments/footer :: footer}"></footer>
 </body>
 </html>
