--- a/src/main/resources/templates/admin/forms/update.html
+++ b/src/main/resources/templates/admin/forms/update.html
@@ -31,23 +31,23 @@
                 <ul class="list-unstyled">
                     <li>
                         <a role="button" title="Modifier le modèle" type="button" class="btn-floating btn-lg bg-primary" data-bs-toggle="modal" data-bs-target="#updateModel">
-                            <i class="fa-solid fa-file-pen fa-2xl"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a role="button" title="Importer la configuration d'un circuit" type="button" class="btn-floating btn-lg bg-primary" data-bs-toggle="modal" data-bs-target="#importWorkflow">
-                            <i class="fa-solid fa-file-import fa-2xl"></i>
+                            <i class="fi fi-rr-cloud-upload fa-2xl" style="margin-top: 16px"></i>
                         </a>
                     </li>
                     <li>
                         <a class="btn-floating btn-lg bg-primary" title="Exporter le circuit" role="button" th:href="'/' + ${workflowRole} + '/forms/export/' + ${form.id}">
-                            <i class="fa-solid fa-file-export fa-2xl"></i>
+                            <i class="fi fi-rr-file-export fa-2xl" style="margin-top: 16px"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a role="button" title="Importer la configuration d'un circuit" type="button" class="btn-floating btn-lg bg-primary" data-bs-toggle="modal" data-bs-target="#importWorkflow">
+                            <i class="fi fi-rr-file-import fa-2xl" style="margin-top: 16px"></i>
                         </a>
                     </li>
                     <li>
                         <a id="saveButton" title="Enregistrer" role="button" class="btn-floating btn-lg bg-success"
                             onclick="$('#formUpdate').submit();">
-                            <i class="fa-solid fa-save fa-2xl"></i>
+                            <i class="fi fi-rr-disk fa-2xl" style="margin-top: 16px"></i>
                         </a>
                     </li>
                 </ul>
@@ -65,8 +65,7 @@
             </ul>
             <div class="card text-bg-light col-lg-11 m-2">
                 <div class="card-body">
-                    <h3>FORM ID : <input type="text" readonly disabled th:value="${form.id}"></h3>
-                    <h5>Circuit associé : <a th:if="${form.workflow != null}" th:href="'/' + ${workflowRole} + '/workflows/update/' + ${form.workflow.id}" th:text="${form.workflow.description}"></a>, Modèle actuel : <a th:href="'/' + ${workflowRole} + '/forms/get-file/' + ${form.id}" target="_blank"><span th:text="${form.document.fileName}"></span></a></h5>
+                    <h5 th:text="'Formulaire : ' + ${form.title}"></h5>
                     <form id="formUpdate" th:action="'/' + ${workflowRole} + '/forms'" th:object="${form}" th:method="'put'">
                         <input type="hidden" th:field="*{id}">
                         <div class="accordion" id="accordionExample">
@@ -78,6 +77,8 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
+                                        <p>Identifiant du formulaire : <input type="text" readonly disabled th:value="${form.id}">, Circuit associé : <a th:if="${form.workflow != null}" th:href="'/' + ${workflowRole} + '/workflows/update/' + ${form.workflow.id}" th:text="${form.workflow.description}"></a>, Modèle actuel : <a th:href="'/' + ${workflowRole} + '/forms/get-file/' + ${form.id}" target="_blank"><span th:text="${form.document.fileName}"></span></a></p>
+
                                         <div class="form-group mb-3">
                                             <label for="title"><strong>Titre (affiché aux utilisateurs)</strong></label>
                                             <input id="title" class="form-control" type="text" th:field="*{title}"/>
@@ -89,7 +90,7 @@
                                         <div class="form-group mb-3">
                                             <label for="workflowType"><strong>Circuit associé au formulaire</strong></label>
                                             <select class="slim-select-simple" id="workflowType" name="workflow">
-                                                <option value="">-- dissocier d'un circuit --</option>
+                                                <option value="">-- dissocier d’un circuit (perte des emplacements de signature) --</option>
                                                 <th:block th:each="workflowType : ${workflowTypes}">
                                                     <option th:if="${workflowType != null}" th:value="${workflowType.id}"
                                                             th:text="${workflowType.description}" th:selected="${workflowType == form.workflow}"></option>
