--- a/src/main/resources/templates/admin/workflows/list.html
+++ b/src/main/resources/templates/admin/workflows/list.html
@@ -17,8 +17,8 @@
         <div id="content" class="content">
             <div class="fixed-action-simple-btn" >
                 <a title="Créer un nouveau circuit" data-bs-toggle="modal" data-bs-target="#newWorkflow" type="button"
-                    class="btn-floating btn-lg bg-primary">
-                    <i class="fa-solid fa-plus fa-2xl"></i>
+                    class="btn-lg btn-floating text-dark bg-primary">
+                    <i class="fi fi-rr-apps-add fa-2xl" style="margin-top: 15px;"></i>
                 </a>
             </div>
             <div class="col-sm-9 col-md-10 col-xl-11 p-0 m-2">
