add empty trash

--- a/src/main/resources/templates/user/signbooks/list.html
+++ b/src/main/resources/templates/user/signbooks/list.html
@@ -23,40 +23,49 @@
         <div id="content" class="content">
             <div id="signButtons" class="fixed-action-btns active">
                 <ul id="buttonList" class="list-unstyled">
+                    <li th:if="${statusFilter == 'deleted'}">
+                        <form th:action="'/user/signbooks/empty-trash'" th:method="'delete'"
+                              onsubmit="return confirm('Voulez-vous vraiment vider la corbeille ?');">
+                            <button type="submit" tabindex="1" id="trashLaunchButton" class="btn-floating btn-lg bg-danger"
+                                    title="Vider la corbeille" style="border: 0;">
+                                <i class="fi fi-rr-dumpster-fire fa-2xl" style="margin-top: 0;"></i>
+                            </button>
+                        </form>
+                    </li>
                     <li>
                         <a type="button" id="massSignModalButton"
                             data-bs-toggle="modal" data-bs-target="#signModal"
                             title="Signer en masse les demandes sélectionnées"
                             class="btn-floating btn-lg bg-success d-none">
-                            <i class="fa-solid fa-file-signature fa-2xl"></i>
+                            <i class="fi fi-rr-signature-lock fa-2xl" style="margin-top: 15px;"></i>
                         </a>
                     </li>
                     <li>
                         <a type="button" id="deleteMultipleButton"
                             title="Supprimer en masse les demandes sélectionnées"
                             class="btn-floating btn-lg bg-danger d-none">
-                            <i class="fa-solid fa-trash-alt fa-2xl"></i>
+                            <i class="fi fi-rr-trash fa-2xl" style="margin-top: 15px;"></i>
                         </a>
                     </li>
                     <li>
                         <a type="button" id="downloadMultipleButton"
                             title="Télécharger la selection"
                             class="btn-floating btn-lg bg-primary d-none">
-                            <i class="fa-solid fa-download fa-2xl"></i>
+                            <i class="fi fi-rr-download fa-2xl" style="margin-top: 15px;"></i>
                         </a>
                     </li>
                     <li>
                         <a type="button" id="downloadMultipleButtonWithReport"
                             title="Télécharger la selection avec les rapports"
                             class="btn-floating btn-lg bg-primary d-none">
-                            <i class="fa-solid fa-file-archive fa-2xl"></i>
+                            <i class="fi fi-rr-folder-download fa-2xl" style="margin-top: 15px;"></i>
                         </a>
                     </li>
                     <li>
                         <a th:unless="${#authorization.expression('hasRole(''ROLE_OTP'')')}" type="button" href="/user"
                             title="Créer une nouvelle demande"
-                            class="btn-floating btn-lg bg-primary">
-                            <i class="fa-solid fa-plus fa-2xl"></i>
+                            class="btn-floating btn-lg bg-secondary">
+                            <i class="fi fi-rr-leave fa-2xl" style="margin-top: 15px;"></i>
                         </a>
                     </li>
                 </ul>
