--- a/src/main/resources/templates/user/signrequests/show.html
+++ b/src/main/resources/templates/user/signrequests/show.html
@@ -69,7 +69,7 @@
                     <th:block id="signButtons" th:if="${signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).draft}" th:unless="${signable}" class="fixed-action-btns active">
                         <li>
                             <a tabindex="1" id="start-button" role="button" class="btn-floating btn-lg bg-success" title="Démarrer le circuit"
-                               data-bs-toggle="modal" data-bs-target="#sendModal"><i class="fi fi-rr-play-alt fa-2xl" style="margin-top: 16px;"></i>
+                               data-bs-toggle="modal" data-bs-target="#sendModal"><i class="fi fi-rr-play-alt fa-2xl" style="margin-top: 15px;"></i>
                             </a>
                         </li>
                         <!--                        <li>-->
@@ -106,31 +106,31 @@
                     </li>
                     <li th:if="${signRequest.createBy.eppn == userEppn && signRequest.deleted}">
                         <a tabindex="1" th:href="'/user/signbooks/restore/' + ${signBook.id}" role="button" class="btn-floating btn-lg bg-primary" title="Restaurer">
-                            <i class="fi fi-rr-trash-restore-alt fa-2xl" style="margin-top: 16px;"></i>
+                            <i class="fi fi-rr-trash-restore-alt fa-2xl" style="margin-top: 15px;"></i>
                         </a>
                     </li>
                     <li th:if="${signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).refused && signRequest.createBy.eppn == userEppn}">
                         <a tabindex="1" class="btn-lg btn-floating bg-primary"
                             th:href="'/ws-secure/global/get-original-file/' + ${id}" target="_blank"
                             title="Télécharger le document original">
-                            <i class="fi fi-rr-download fa-2xl" style="margin-top: 16px;"></i></a>
+                            <i class="fi fi-rr-download fa-2xl" style="margin-top: 15px;"></i></a>
                     </li>
                     <li th:if="${(signRequest.parentSignBook.liveWorkflow.workflow == null || signRequest.parentSignBook.liveWorkflow.workflow.authorizeClone) && signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).refused && signRequest.createBy.eppn == userEppn}">
                         <a tabindex="1" type="button"
                             class="btn-lg btn-floating bg-primary" data-bs-toggle="modal" title="Relancer cette demande"
                             data-bs-target="#cloneModal">
-                            <i class="fi fi-rr-refresh fa-2xl"style="margin-top: 16px;"></i>
+                            <i class="fi fi-rr-refresh fa-2xl"style="margin-top: 15px;"></i>
                         </a>
                     </li>
                     <li th:if="${(signRequest.parentSignBook.liveWorkflow.workflow == null || signRequest.parentSignBook.liveWorkflow.workflow.forbidDownloadsBeforeEnd == null || !signRequest.parentSignBook.liveWorkflow.workflow.forbidDownloadsBeforeEnd) && signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).pending}">
                         <a tabindex="1" class="btn-lg btn-floating bg-primary"
                             th:href="'/ws-secure/global/get-last-file/' + ${id}" target="_blank"
-                            title="Télécharger le document"><i class="fi fi-rr-download fa-2xl" style="margin-top: 16px;"></i></a>
+                            title="Télécharger le document"><i class="fi fi-rr-download fa-2xl" style="margin-top: 15px;"></i></a>
                     </li>
                     <li th:if="${signRequest.status != T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).pending && signRequest.status != T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).refused}">
                         <a tabindex="1" class="btn-lg btn-floating bg-primary"
                             th:href="'/ws-secure/global/get-last-file/' + ${id}" target="_blank"
-                            title="Télécharger la dernière version du document"><i class="fi fi-rr-download fa-2xl" style="margin-top: 16px;"></i></a>
+                            title="Télécharger la dernière version du document"><i class="fi fi-rr-download fa-2xl" style="margin-top: 15px;"></i></a>
                     </li>
                     <li th:if="${signRequest.parentSignBook.signRequests.size() > 1 && signRequest.status != T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).pending}">
                         <a tabindex="1" class="btn-lg btn-floating bg-primary"
@@ -144,14 +144,6 @@
                             th:href="'/ws-secure/global/print-with-code/' + ${id}" target="_blank"
                             title="Imprimer avec un code datamatrix">
                             <i class="fa-solid fa-print fa-2xl"></i></a>
-                    </li>
-                    <li th:if="${@preAuthorizeService.signRequestDelete(signRequest.id, authUserEppn) && (!signRequest.status.equals(T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).completed) || signBook.status.equals(T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).completed))}">
-                        <button tabindex="1" id="trashLaunchButton" class="btn-floating btn-lg bg-danger"
-                                th:title="${!signRequest.deleted ? 'Mettre à la corbeille' : 'Supprimer définitivement de la corbeille'}"
-                                data-bs-toggle="modal" th:data-bs-target="'#modal-warning-' + ${signRequest.id}" style="border: 0; ">
-                            <i th:if="${signRequest.deleted}" class="fi fi-rr-dumpster-fire fa-2xl" style="margin-top: 0;"></i>
-                            <i th:if="${!signRequest.deleted}" class="fi fi-rr-trash fa-2xl" style="margin-top: 0;"></i>
-                        </button>
                     </li>
                     <th:block id="openButtons" class="fixed-action-btns active"
                         th:if="${viewRight && (signRequest.deleted || signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).completed || signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).exported || signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).archived || signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).cleaned)}"
@@ -175,9 +167,17 @@
                             </a>
                         </li>
                     </th:block>
+                    <li th:if="${@preAuthorizeService.signRequestDelete(signRequest.id, authUserEppn) && (!signRequest.status.equals(T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).completed) || signBook.status.equals(T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).completed))}">
+                        <button tabindex="1" id="trashLaunchButton" class="btn-floating btn-lg bg-danger"
+                                th:title="${!signRequest.deleted ? 'Mettre à la corbeille' : 'Supprimer définitivement de la corbeille'}"
+                                data-bs-toggle="modal" th:data-bs-target="'#modal-warning-' + ${signRequest.id}" style="border: 0; ">
+                            <i th:if="${signRequest.deleted}" class="fi fi-rr-trash-xmark fa-2xl" style="margin-top: 0;"></i>
+                            <i th:if="${!signRequest.deleted}" class="fi fi-rr-trash fa-2xl" style="margin-top: 0;"></i>
+                        </button>
+                    </li>
                     <li th:if="${nextSignBook != null}" class="">
                         <a tabindex="1" th:unless="${user.userType.name() == 'external'}" id="nextSignBookButton" role="button" th:href="'/user/signbooks/' + ${nextSignBook.id}" class="btn-lg btn-floating bg-primary" title="Aller à la suivante">
-                            <i class="fi fi-rr-arrow-right fa-2xl" style="margin-top: 16px;"></i>
+                            <i class="fi fi-rr-arrow-right fa-2xl" style="margin-top: 15px;"></i>
                         </a>
                         <a tabindex="1" th:if="${user.userType.name() == 'external'}" id="nextSignBookButton" role="button" th:href="'/otp/signrequests/' + ${nextSignBook.signRequests.get(0).id}" class="btn-lg btn-floating bg-primary" title="Aller à la suivante">
                             <i class="fa-solid fa-arrow-right fa-2xl"></i>
