--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -752,7 +752,7 @@ textarea:placeholder-shown.required-field {
 }
 
 .step-type {
-    font-size: 10pt;
+    font-size: 15px;
     font-weight: bold;
 }
 
