--- a/src/main/resources/templates/admin/forms/includes/tools.html
+++ b/src/main/resources/templates/admin/forms/includes/tools.html
@@ -30,7 +30,7 @@
 				<button id="addSpotButton"
 						th:title="${form.workflow.workflowSteps.size() > srpMap.entrySet().size()} ? 'Ajouter un emplacement de signature' : 'Plus d`emplacement disponible'"
 						class="btn btn-warning" th:disabled="${form.workflow.workflowSteps.size() <= srpMap.entrySet().size()}">
-					<i class="fa-solid fa-map-marker-alt"></i> Ajouter un emplacement de signature
+					<i class="fi fi-rr-digital-signature"></i> Ajouter un emplacement de signature
 				</button>
 			</th:block>
 		</th:block>
