--- a/src/main/resources/templates/user/signrequests/show.html
+++ b/src/main/resources/templates/user/signrequests/show.html
@@ -58,7 +58,7 @@
                 <ul id="buttonList" class="list-unstyled">
                     <li>
                         <button th:if="${isManager && signRequest.data == null}" tabindex="1" id="addSpotButton2" role="button" class="btn-floating btn-lg bg-warning d-none" title="Ajouter un emplacement de signature" style="border: 0">
-                            <i class="fi fi-rr-signature-lock fa-2xl text-dark" style="margin-top: 0;"></i>
+                            <i class="fi fi-rr-digital-signature fa-2xl text-dark" style="margin-top: 0;"></i>
                         </button>
                     </li>
                     <li>
@@ -69,7 +69,7 @@
                     <th:block id="signButtons" th:if="${signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).draft}" th:unless="${signable}" class="fixed-action-btns active">
                         <li>
                             <a tabindex="1" id="start-button" role="button" class="btn-floating btn-lg bg-success" title="Démarrer le circuit"
-                               data-bs-toggle="modal" data-bs-target="#sendModal"><i class="fi fi-rr-play-alt fa-2xl" style="margin-top: 15px;"></i>
+                                data-bs-toggle="modal" data-bs-target="#sendModal"><i class="fi fi-rr-play-alt fa-2xl" style="margin-top: 15px;"></i>
                             </a>
                         </li>
                         <!--                        <li>-->
@@ -134,8 +134,8 @@
                     </li>
                     <li th:if="${signRequest.parentSignBook.signRequests.size() > 1 && signRequest.status != T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).pending}">
                         <a tabindex="1" class="btn-lg btn-floating bg-primary"
-                           th:href="'/ws-secure/global/get-last-files/' + ${signRequest.parentSignBook.id}" target="_blank"
-                           title="Télécharger la dernière version des documents dans une archive ZIP">
+                            th:href="'/ws-secure/global/get-last-files/' + ${signRequest.parentSignBook.id}" target="_blank"
+                            title="Télécharger la dernière version des documents dans une archive ZIP">
                             <i class="fa-solid fa-file-archive fa-2xl"></i></a>
                     </li>
                     <li th:if="${signRequest.lastSignedDocument.contentType == 'application/pdf' && signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).completed}">
